# blob_game

./: Cargo.toml  capture_debug.cap
assets/: petri.glb
assets/shaders/: raymarching_common.wgsl  voxel_material.wgsl  voxel_raymarch.wgsl
src/: bvh.rs  camera.rs  main.rs  raymarching.rs
